# atdot

./: .gitignore  README.md
atdot/: next.config.ts  package-lock.json  package.json
atdot/app/: globals.css  layout.tsx  page.tsx
atdot/app/auth/register/: page.tsx
atdot/app/dashboard/: page.tsx
atdot/app/keys/: page.tsx
atdot/app/profile/: page.tsx
atdot/components/: AppShell.tsx  LetterGlitch.tsx  Modal.tsx  Sidebar.tsx
atdot/lib/: api.tsx
atdot/public/sdk/: atdot.js
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_sessions.sql  0003_fraud.sql  0004_debug.sql  0005_feedback_honeypot.sql  0006_drift_challenges.sql
backend/src/: apikey.rs  error.rs  events.rs  main.rs  state.rs
backend/src/api/: auth.rs  challenge.rs  debug.rs  events.rs  feedback.rs  mod.rs  ws.rs
backend/src/auth/: handlers.rs  jwt.rs  mod.rs  service.rs
backend/src/fraud/: continuity.rs  embedding.rs  features.rs  geoip.rs  graph.rs  l1.rs  l2.rs  l3.rs  meta_variance.rs  mod.rs  scoring.rs
backend/src/models/: claims.rs
