[package]
name    = "antifrod-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum              = { version = "0.7", features = ["ws"] }
tokio             = { version = "1", features = ["full"] }
tower-http        = { version = "0.5", features = ["cors"] }
sqlx              = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
uuid              = { version = "1", features = ["v4", "v5", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
bcrypt            = "0.15"
jsonwebtoken      = "9"
anyhow            = "1"
dotenvy            = "0.15"
tracing            = "0.1"
tracing-subscriber = "0.3"
dashmap            = "5"
lru                = "0.12"
parking_lot        = "0.12"
sled               = "0.34"
bincode            = "1"